--- a/css/register.css
+++ b/css/register.css
@@ -9,8 +9,8 @@ body{
     background: linear-gradient(to bottom, #000001, #302b63, #24243e);
 }
 .main{
-    width: 350px;
-    height: 500px;
+    width: 450px;
+    height: 600px;
     background: red;
     overflow: hidden;
     background: url("https://doc-08-2c-docs.googleusercontent.com/docs/securesc/68c90smiglihng9534mvqmq1946dmis5/fo0picsp1nhiucmc0l25s29respgpr4j/1631524275000/03522360960922298374/03522360960922298374/1Sx0jhdpEpnNIydS4rnN4kHSJtU1EyWka?e=view&authuser=0&nonce=gcrocepgbb17m&user=03522360960922298374&hash=tfhgbs86ka6divo3llbvp93mg4csvb38") no-repeat center/ cover;
@@ -69,7 +69,7 @@ button:hover{
     background: #6d44b8;
 }
 .login{
-    height: 460px;
+    height: 560px;
     background: #eee;
     border-radius: 60% / 10%;
     transform: translateY(-120px);
@@ -82,11 +82,14 @@ button:hover{
 }
 
 #chk:checked ~ .login{
-    transform: translateY(-460px);
+    transform: translateY(-560px);
 }
 #chk:checked ~ .login label{
     transform: scale(1);
 }
 #chk:checked ~ .signup label{
     transform: scale(.6);
+}
+span{
+    color: rosybrown;
 }
